cmss/product-contract/objects/ProductContractUrl__mdt/fields/ApplicationProcessId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationProcessId__c</fullName>
    <description>ID of process in ciselnik. e.g. eUver, eSporeni...</description>
    <inlineHelpText>ID of process in ciselnik. e.g. eUver, eSporeni...</inlineHelpText>
    <label>Application Process Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>