cmss/product-contract/objects/ProductContractUrl__mdt/fields/ApplicationUrl__c.field-meta.xml
<CustomField>
    <fullName>ApplicationUrl__c</fullName>
    <description>URL of the process. It may contain {globalId}, {opportunityId} parameters</description>
    <inlineHelpText>URL of the process. It may contain {globalId}, {opportunityId} parameters</inlineHelpText>
    <label>Application Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>