cmss/product-contract/objects/ProductContractUrl__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>priority for ordering</description>
    <inlineHelpText>priority for ordering of items</inlineHelpText>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>